# thebluelogicalqubit-yquantum2026

./: Logical Qubits YQuantum.pptx  README.md  modules.py  pyproject.toml
Pending/finally 10 gpu/: mpo_routing_tests.py  mpo_tests.py  run_gpu_tests_qsub.sh
Solved/: P1.py  P2.py  P2_small_bump.qasm  P3.py  P3_tiny_ripple.qasm  P4.py  P4_gentle_mound.qasm  P5_soft_rise.qasm  P6.py  P6_low_hill.qasm  P7.py  P7_rolling_ridge.qasm  P8.py  P8_bold_peak.qasm  P9.py  P9_grand_summit.qasm  bitstrings.txt
p10/finally 10 gpu/: P10_eternal_mountain.qasm  gpu_backend.py  mpo_absorber.py  mpo_core.py  mpo_impl_gpu.out  mpo_implementation.py  mpo_pipeline.py  mpo_unswap.py  run_mpo_implementation_qsub.sh  run_peak.py
ppt/: extract_data.py  index.html
ppt/css/: style.css
ppt/data/: results.json
ppt/js/: background.js  interactive.js  navigation.js
ppt/slides/: 01-title.html  02-challenge.html  03-overview.html  04-p5.html  05-p6.html  06-p7.html  07-methods.html  08-p10.html  09-references.html
